<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>world.convex</groupId>
	<artifactId>convex</artifactId>
	<version>0.8.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Convex Parent</name>
	<description>Parent POM used to build core Convex modules.</description>
	<url>https://convex.world</url>

	<modules>
		<module>convex-core</module>
		<module>convex-cli</module>
		<module>convex-gui</module>
		<module>convex-peer</module>
		<module>convex-db</module>
		<module>convex-benchmarks</module>
		<module>convex-observer</module>
		<module>convex-java</module>
		<module>convex-restapi</module>
		<module>convex-dlfs</module>
		<module>convex-social</module>
		<module>convex-integration</module>
	</modules>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<logback.version>1.5.25</logback.version>
		<jmh.version>1.37</jmh.version>
		<junit.version>6.0.1</junit.version>
		<slf4j.version>2.0.16</slf4j.version>
		<hc.version>5.5</hc.version>
		<netty.version>4.2.7.Final</netty.version>
		<convex.version>${project.version}</convex.version>
		<!--Freeze this for reproducible builds. -->
		<project.build.outputTimestamp>2025-11-21T21:46:04Z</project.build.outputTimestamp>
		<argLine>
			--add-opens=java.base/java.util=ALL-UNNAMED
		</argLine>
	</properties>

	<licenses>
		<license>
			<name>Convex Public License</name>
			<url>https://github.com/Convex-Dev/convex/blob/master/LICENSE.md</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mike Anderson</name>
			<email>mike@convex.world</email>
			<organization>Convex Foundation</organization>
			<organizationUrl>https://convex.world</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/Convex-Dev/convex.git</connection>
		<developerConnection>scm:git:ssh://github.com:Convex-Dev/convex.git</developerConnection>
		<url>https://github.com/Convex-Dev/convex.git</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<url>https://central.sonatype.org/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<!-- This adds GPG signing for all artifacts -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>


				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Use this to require a minimum Maven version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.7</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Actually activate the spurce / javadoc plugins for every module -->
		    <plugin>
		      <artifactId>maven-source-plugin</artifactId>
		      <executions><execution><id>attach-sources</id></execution></executions>
		    </plugin>
		    <plugin>
		      <artifactId>maven-javadoc-plugin</artifactId>
		      <executions><execution><id>attach-javadocs</id></execution></executions>
		    </plugin>

		    <plugin>
  		        <groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.9.0</version>
 				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<checksums>all</checksums>
					<!-- <waitUntil>published</waitUntil> -->
					<autoPublish>true</autoPublish> 
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>makeAggregateBom</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<projectType>library</projectType>
					<schemaVersion>1.4</schemaVersion>
					<includeBomSerialNumber>true</includeBomSerialNumber>
					<includeCompileScope>true</includeCompileScope>
					<includeProvidedScope>true</includeProvidedScope>
					<includeRuntimeScope>true</includeRuntimeScope>
					<includeSystemScope>true</includeSystemScope>
					<includeTestScope>false</includeTestScope>
					<includeLicenseText>false</includeLicenseText>
					<outputReactorProjects>true</outputReactorProjects>
					<outputFormat>json</outputFormat>
					<outputName>CycloneDX-Sbom</outputName>
					<verbose>false</verbose>
				</configuration>
			</plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.4</version>
					<configuration>
						<forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
					</configuration>
				</plugin>
				<plugin>
                	<groupId>org.apache.maven.plugins</groupId>
                	<artifactId>maven-resources-plugin</artifactId>
                	<version>3.3.1</version>
                	<configuration>
				        <!-- Silence warnings with explicit encoding -->
				        <encoding>UTF-8</encoding>
				        <propertiesEncoding>UTF-8</propertiesEncoding>
				    </configuration>
            	</plugin>

				<!-- This adds sources -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				
			

				<!-- This generates JavaDocs -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.10.0</version>
					<configuration>
						<doclint>syntax</doclint>
						<quiet />
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
